# fluvio-websocket-source-connector

./: Cargo.toml  Connector.toml  Makefile  sample-config.yaml
crates/mock-websocket-server/: Cargo.toml
crates/mock-websocket-server/src/: main.rs
crates/websocket-source/: Cargo.toml
crates/websocket-source/src/: main.rs
src/: config.rs  events.rs  main.rs  source.rs
tests/: websocket-test-config.yaml  websocket-test.bats
