[package]
name = "wss"
version = "0.1.0"
authors = ["Marcin <hi.marcin@icloud.com>"]
edition = "2021"

[dependencies]
anyhow = "*"
async-trait = "*"
fluvio = { git = "https://github.com/infinyon/fluvio", rev = "cddc05388b7a1278837adc506430f339f311212d" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", rev = "cddc05388b7a1278837adc506430f339f311212d", features = ["derive"]}
futures = "*"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_derive = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = "*"
tungstenite = "*"
