[package]
name = "wss"
version = "0.1.0"
authors = ["Marcin <hi.marcin@icloud.com>"]
edition = "2021"

[dependencies]
# Once moved to http-source, can be used with workspace=True
async-std = { version = "1.12",  default-features = false, features = ["attributes", "tokio1"] }
async-stream = "0.3.5"
anyhow = "*"
async-trait = "*"
fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.11.3" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.11.3", features = ["derive"] }
futures = "*"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_derive = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = "*"
tungstenite = "*"
