[workspace]
members = [ "crates/mock-websocket-server",
    "crates/websocket-source",
    # "crates/mock-websocket-server",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
async-std = { version = "1.12",  default-features = false, features = ["attributes", "tokio1"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

